# scripts

./: .gitignore  pyproject.toml
dev-samurai-courses-download/: README.md  README_PTBR.md  pyproject.toml
dev-samurai-courses-download/dev_samurai_courses_download/: main.py
